# nl2sql_weint

./: ARCHITECTURE.md  graph.json  pyproject.toml  start_server.py
docs/: Chinook_AutoIncrement_DDL.sql  Chinook_Sqlite_Sql.md  SQL-of-Thought_中文翻译.md  SQL-of-Thought_论文总结.md  chinook数据库创建语句.md  单产跟断线  参考文献及项目
docs/aix_report数据库/: aix_report_DDL.md  aix_report_DDL.sql
docs/chinook数据库-验证问题列表/: chinook验证问题列表.md
docs/imdb数据库/: TEST_PLAN.md
docs/llm-wiki-compiler/: llm-wiki-compiler-  llm-wiki-compiler-mcp-tools-analysis.md
src/agent/: __init__.py  config.py  main_agent.py  main_agent_bak.py
src/agent/backends/: custom_opensandbox.py  sandbox_setup.py
src/agent/data/: Chinook_Sqlite.sqlite  chinook_ddl.md
src/agent/llms/: __init__.py  model.py
src/agent/memory/: AGENTS.md
src/agent/prompt/: MAIN_AGENT_PROMPT.md  NL2SQL_SYSTEM_PROMPT.md  SYSTEM_PROMPT.md  __init__.py
src/agent/settings/: __init__.py  setting.py
src/agent/subagents/: loader.py  task_with_trace.py
src/agent/tools/: __init__.py  mcp_tool.py  wren_silent_launcher.py
src/agent/utils/: __init__.py  path_resolver.py
src/agent/workspace/: __init__.py
src/mcp_server/db_mcp_server/: .env.example
src/skills/: __init__.py
src/test/llm_wiki_compiler_exec/: 01_wiki_status.py  02_read_page.py  03_read_page_entities_fail.py  04_search_pages.py  05_query_wiki.py  06_lint_wiki.py  07_context_pack.py  README.md  mcp_config.py  mcp_helper.py  run_all.py  run_all_tools.py
src/test/wrenai_exec/: CLI_COMMANDS.md  README.md  gen_models.py  wren_project.yml
src/test/wrenai_exec_Chinook/: AGENTS.md  (+6 more)
(+77 files in other folders)
