[project]
name = "nl2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "deepagents>=0.6.12",
    "fastmcp>=3.4.4",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.5",
    "langgraph-api>=0.11.1",
    "mysqlclient>=2.2.8",
    "opensandbox>=0.1.14",
    "pandas>=3.0.3",
    "pymysql>=1.2.0",
    "pyyaml>=6.0.3",
    "wrenai>=0.13.0",
]
